infra/manifests/1-manifest/admissionregistration.k8s.io_v1beta1-validatingwebhookconfiguration-default-nginx-ingress-controller-ingress-nginx-admission.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/component: admission-webhook
    app.kubernetes.io/instance: nginx-ingress-controller
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    helm.sh/chart: ingress-nginx-2.1.0
  name: nginx-ingress-controller-ingress-nginx-admission
webhooks:
- clientConfig:
    service:
      name: nginx-ingress-controller-ingress-nginx-controller-admission
      namespace: nginx-namespace
      path: /extensions/v1beta1/ingresses
  failurePolicy: Fail
  name: validate.nginx.ingress.kubernetes.io
  rules:
  - apiGroups:
    - extensions
    - networking.k8s.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
